preprocessing and scaling section 3.2

--- a/Week2/AssignmentWeek2.ipynb
+++ b/Week2/AssignmentWeek2.ipynb
@@ -782,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "713fe9b5",
+   "id": "ce153d43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbe80f3a",
+   "id": "dd20cf0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "c23ea87b",
    "metadata": {
     "deletable": false,
@@ -1238,188 +1238,16 @@
     "    return np.vstack(output_data)\n",
     "\n",
     "def robust_scaler(input_data):\n",
-    "    median = input_data.mean()\n",
     "    IQR = np.percentile(input_data, 75) - np.percentile(input_data, 25)\n",
     "    \n",
-    "    output_data = (input_data - np.percentile(input_data, 25)) / (np.percentile(input_data, 75) - np.percentile(input_data, 25))\n",
+    "#     output_data = (input_data - np.percentile(input_data, 25)) / (np.percentile(input_data, 75) - np.percentile(input_data, 25))\n",
     "    \n",
-    "    # Replace IQR values of 0 with a small value to avoid division by zero\n",
-    "#     if IQR == 0: IQR = 1e-12\n",
+    "#     Replace IQR values of 0 with a small value to avoid division by zero\n",
+    "    if IQR == 0: IQR = 1e-12\n",
     "        \n",
-    "#     output_data = (input_data - np.mean(input_data)) / IQR\n",
+    "    output_data = (input_data - np.mean(input_data)) / IQR\n",
     "    \n",
     "    return np.vstack(output_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "6d63e3a2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.        ,  0.52941176, -0.08823529, -0.44117647],\n",
-       "       [ 0.94117647,  0.38235294, -0.08823529, -0.44117647],\n",
-       "       [ 0.88235294,  0.44117647, -0.11764706, -0.44117647],\n",
-       "       [ 0.85294118,  0.41176471, -0.05882353, -0.44117647],\n",
-       "       [ 0.97058824,  0.55882353, -0.08823529, -0.44117647],\n",
-       "       [ 1.08823529,  0.64705882,  0.        , -0.38235294],\n",
-       "       [ 0.85294118,  0.5       , -0.08823529, -0.41176471],\n",
-       "       [ 0.97058824,  0.5       , -0.05882353, -0.44117647],\n",
-       "       [ 0.79411765,  0.35294118, -0.08823529, -0.44117647],\n",
-       "       [ 0.94117647,  0.41176471, -0.05882353, -0.47058824],\n",
-       "       [ 1.08823529,  0.58823529, -0.05882353, -0.44117647],\n",
-       "       [ 0.91176471,  0.5       , -0.02941176, -0.44117647],\n",
-       "       [ 0.91176471,  0.38235294, -0.08823529, -0.47058824],\n",
-       "       [ 0.76470588,  0.38235294, -0.17647059, -0.47058824],\n",
-       "       [ 1.20588235,  0.67647059, -0.14705882, -0.44117647],\n",
-       "       [ 1.17647059,  0.79411765, -0.05882353, -0.38235294],\n",
-       "       [ 1.08823529,  0.64705882, -0.11764706, -0.38235294],\n",
-       "       [ 1.        ,  0.52941176, -0.08823529, -0.41176471],\n",
-       "       [ 1.17647059,  0.61764706,  0.        , -0.41176471],\n",
-       "       [ 1.        ,  0.61764706, -0.05882353, -0.41176471],\n",
-       "       [ 1.08823529,  0.5       ,  0.        , -0.44117647],\n",
-       "       [ 1.        ,  0.58823529, -0.05882353, -0.38235294],\n",
-       "       [ 0.85294118,  0.55882353, -0.20588235, -0.44117647],\n",
-       "       [ 1.        ,  0.47058824,  0.        , -0.35294118],\n",
-       "       [ 0.91176471,  0.5       ,  0.05882353, -0.44117647],\n",
-       "       [ 0.97058824,  0.38235294, -0.02941176, -0.44117647],\n",
-       "       [ 0.97058824,  0.5       , -0.02941176, -0.38235294],\n",
-       "       [ 1.02941176,  0.52941176, -0.05882353, -0.44117647],\n",
-       "       [ 1.02941176,  0.5       , -0.08823529, -0.44117647],\n",
-       "       [ 0.88235294,  0.44117647, -0.02941176, -0.44117647],\n",
-       "       [ 0.91176471,  0.41176471, -0.02941176, -0.44117647],\n",
-       "       [ 1.08823529,  0.5       , -0.05882353, -0.38235294],\n",
-       "       [ 1.02941176,  0.70588235, -0.05882353, -0.47058824],\n",
-       "       [ 1.11764706,  0.73529412, -0.08823529, -0.44117647],\n",
-       "       [ 0.94117647,  0.41176471, -0.05882353, -0.44117647],\n",
-       "       [ 0.97058824,  0.44117647, -0.14705882, -0.44117647],\n",
-       "       [ 1.11764706,  0.52941176, -0.11764706, -0.44117647],\n",
-       "       [ 0.94117647,  0.55882353, -0.08823529, -0.47058824],\n",
-       "       [ 0.79411765,  0.38235294, -0.11764706, -0.44117647],\n",
-       "       [ 1.        ,  0.5       , -0.05882353, -0.44117647],\n",
-       "       [ 0.97058824,  0.52941176, -0.11764706, -0.41176471],\n",
-       "       [ 0.82352941,  0.17647059, -0.11764706, -0.41176471],\n",
-       "       [ 0.79411765,  0.44117647, -0.11764706, -0.44117647],\n",
-       "       [ 0.97058824,  0.52941176, -0.02941176, -0.32352941],\n",
-       "       [ 1.        ,  0.61764706,  0.05882353, -0.38235294],\n",
-       "       [ 0.91176471,  0.38235294, -0.08823529, -0.41176471],\n",
-       "       [ 1.        ,  0.61764706, -0.02941176, -0.44117647],\n",
-       "       [ 0.85294118,  0.44117647, -0.08823529, -0.44117647],\n",
-       "       [ 1.05882353,  0.58823529, -0.05882353, -0.44117647],\n",
-       "       [ 0.97058824,  0.47058824, -0.08823529, -0.44117647],\n",
-       "       [ 1.55882353,  0.44117647,  0.88235294, -0.08823529],\n",
-       "       [ 1.38235294,  0.44117647,  0.82352941, -0.05882353],\n",
-       "       [ 1.52941176,  0.41176471,  0.94117647, -0.05882353],\n",
-       "       [ 1.11764706,  0.17647059,  0.67647059, -0.11764706],\n",
-       "       [ 1.41176471,  0.32352941,  0.85294118, -0.05882353],\n",
-       "       [ 1.17647059,  0.32352941,  0.82352941, -0.11764706],\n",
-       "       [ 1.35294118,  0.47058824,  0.88235294, -0.02941176],\n",
-       "       [ 0.94117647,  0.20588235,  0.47058824, -0.20588235],\n",
-       "       [ 1.44117647,  0.35294118,  0.85294118, -0.11764706],\n",
-       "       [ 1.02941176,  0.29411765,  0.64705882, -0.08823529],\n",
-       "       [ 0.97058824,  0.08823529,  0.52941176, -0.20588235],\n",
-       "       [ 1.23529412,  0.38235294,  0.73529412, -0.05882353],\n",
-       "       [ 1.26470588,  0.14705882,  0.67647059, -0.20588235],\n",
-       "       [ 1.29411765,  0.35294118,  0.88235294, -0.08823529],\n",
-       "       [ 1.14705882,  0.35294118,  0.55882353, -0.11764706],\n",
-       "       [ 1.47058824,  0.41176471,  0.79411765, -0.08823529],\n",
-       "       [ 1.14705882,  0.38235294,  0.82352941, -0.05882353],\n",
-       "       [ 1.20588235,  0.29411765,  0.70588235, -0.20588235],\n",
-       "       [ 1.32352941,  0.14705882,  0.82352941, -0.05882353],\n",
-       "       [ 1.14705882,  0.23529412,  0.64705882, -0.17647059],\n",
-       "       [ 1.23529412,  0.44117647,  0.91176471,  0.02941176],\n",
-       "       [ 1.29411765,  0.32352941,  0.67647059, -0.11764706],\n",
-       "       [ 1.35294118,  0.23529412,  0.94117647, -0.05882353],\n",
-       "       [ 1.29411765,  0.32352941,  0.88235294, -0.14705882],\n",
-       "       [ 1.38235294,  0.35294118,  0.76470588, -0.11764706],\n",
-       "       [ 1.44117647,  0.38235294,  0.79411765, -0.08823529],\n",
-       "       [ 1.5       ,  0.32352941,  0.91176471, -0.08823529],\n",
-       "       [ 1.47058824,  0.38235294,  0.97058824,  0.        ],\n",
-       "       [ 1.26470588,  0.35294118,  0.82352941, -0.05882353],\n",
-       "       [ 1.17647059,  0.26470588,  0.52941176, -0.20588235],\n",
-       "       [ 1.11764706,  0.20588235,  0.61764706, -0.17647059],\n",
-       "       [ 1.11764706,  0.20588235,  0.58823529, -0.20588235],\n",
-       "       [ 1.20588235,  0.29411765,  0.64705882, -0.14705882],\n",
-       "       [ 1.26470588,  0.29411765,  1.        , -0.02941176],\n",
-       "       [ 1.08823529,  0.38235294,  0.82352941, -0.05882353],\n",
-       "       [ 1.26470588,  0.5       ,  0.82352941, -0.02941176],\n",
-       "       [ 1.47058824,  0.41176471,  0.88235294, -0.05882353],\n",
-       "       [ 1.35294118,  0.17647059,  0.79411765, -0.11764706],\n",
-       "       [ 1.14705882,  0.38235294,  0.70588235, -0.11764706],\n",
-       "       [ 1.11764706,  0.23529412,  0.67647059, -0.11764706],\n",
-       "       [ 1.11764706,  0.26470588,  0.79411765, -0.14705882],\n",
-       "       [ 1.29411765,  0.38235294,  0.85294118, -0.08823529],\n",
-       "       [ 1.20588235,  0.26470588,  0.67647059, -0.14705882],\n",
-       "       [ 0.97058824,  0.17647059,  0.47058824, -0.20588235],\n",
-       "       [ 1.14705882,  0.29411765,  0.73529412, -0.11764706],\n",
-       "       [ 1.17647059,  0.38235294,  0.73529412, -0.14705882],\n",
-       "       [ 1.17647059,  0.35294118,  0.73529412, -0.11764706],\n",
-       "       [ 1.32352941,  0.35294118,  0.76470588, -0.11764706],\n",
-       "       [ 1.        ,  0.23529412,  0.38235294, -0.17647059],\n",
-       "       [ 1.17647059,  0.32352941,  0.70588235, -0.11764706],\n",
-       "       [ 1.35294118,  0.47058824,  1.26470588,  0.23529412],\n",
-       "       [ 1.20588235,  0.29411765,  1.        ,  0.05882353],\n",
-       "       [ 1.58823529,  0.38235294,  1.23529412,  0.11764706],\n",
-       "       [ 1.35294118,  0.35294118,  1.14705882,  0.02941176],\n",
-       "       [ 1.41176471,  0.38235294,  1.20588235,  0.14705882],\n",
-       "       [ 1.73529412,  0.38235294,  1.44117647,  0.11764706],\n",
-       "       [ 0.94117647,  0.23529412,  0.82352941,  0.        ],\n",
-       "       [ 1.64705882,  0.35294118,  1.35294118,  0.02941176],\n",
-       "       [ 1.47058824,  0.23529412,  1.20588235,  0.02941176],\n",
-       "       [ 1.61764706,  0.55882353,  1.29411765,  0.23529412],\n",
-       "       [ 1.41176471,  0.44117647,  1.        ,  0.08823529],\n",
-       "       [ 1.38235294,  0.29411765,  1.05882353,  0.05882353],\n",
-       "       [ 1.5       ,  0.38235294,  1.11764706,  0.11764706],\n",
-       "       [ 1.17647059,  0.23529412,  0.97058824,  0.08823529],\n",
-       "       [ 1.20588235,  0.32352941,  1.        ,  0.20588235],\n",
-       "       [ 1.38235294,  0.44117647,  1.05882353,  0.17647059],\n",
-       "       [ 1.41176471,  0.38235294,  1.11764706,  0.02941176],\n",
-       "       [ 1.76470588,  0.61764706,  1.47058824,  0.14705882],\n",
-       "       [ 1.76470588,  0.26470588,  1.52941176,  0.17647059],\n",
-       "       [ 1.26470588,  0.14705882,  0.97058824, -0.05882353],\n",
-       "       [ 1.52941176,  0.44117647,  1.17647059,  0.17647059],\n",
-       "       [ 1.14705882,  0.32352941,  0.94117647,  0.08823529],\n",
-       "       [ 1.76470588,  0.32352941,  1.47058824,  0.08823529],\n",
-       "       [ 1.35294118,  0.29411765,  0.94117647,  0.02941176],\n",
-       "       [ 1.47058824,  0.47058824,  1.17647059,  0.11764706],\n",
-       "       [ 1.61764706,  0.44117647,  1.26470588,  0.02941176],\n",
-       "       [ 1.32352941,  0.32352941,  0.91176471,  0.02941176],\n",
-       "       [ 1.29411765,  0.38235294,  0.94117647,  0.02941176],\n",
-       "       [ 1.38235294,  0.32352941,  1.14705882,  0.11764706],\n",
-       "       [ 1.61764706,  0.38235294,  1.20588235, -0.02941176],\n",
-       "       [ 1.67647059,  0.32352941,  1.29411765,  0.05882353],\n",
-       "       [ 1.82352941,  0.61764706,  1.38235294,  0.08823529],\n",
-       "       [ 1.38235294,  0.32352941,  1.14705882,  0.14705882],\n",
-       "       [ 1.35294118,  0.32352941,  1.        , -0.05882353],\n",
-       "       [ 1.29411765,  0.26470588,  1.14705882, -0.08823529],\n",
-       "       [ 1.76470588,  0.38235294,  1.29411765,  0.17647059],\n",
-       "       [ 1.35294118,  0.5       ,  1.14705882,  0.20588235],\n",
-       "       [ 1.38235294,  0.41176471,  1.11764706,  0.02941176],\n",
-       "       [ 1.26470588,  0.38235294,  0.91176471,  0.02941176],\n",
-       "       [ 1.52941176,  0.41176471,  1.08823529,  0.11764706],\n",
-       "       [ 1.47058824,  0.41176471,  1.14705882,  0.20588235],\n",
-       "       [ 1.52941176,  0.41176471,  1.        ,  0.17647059],\n",
-       "       [ 1.20588235,  0.29411765,  1.        ,  0.05882353],\n",
-       "       [ 1.5       ,  0.44117647,  1.23529412,  0.17647059],\n",
-       "       [ 1.47058824,  0.47058824,  1.17647059,  0.23529412],\n",
-       "       [ 1.47058824,  0.38235294,  1.02941176,  0.17647059],\n",
-       "       [ 1.35294118,  0.23529412,  0.97058824,  0.05882353],\n",
-       "       [ 1.41176471,  0.38235294,  1.02941176,  0.08823529],\n",
-       "       [ 1.32352941,  0.5       ,  1.08823529,  0.17647059],\n",
-       "       [ 1.23529412,  0.38235294,  1.        ,  0.02941176]])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# RobustScaler().fit_transform(iris_X)\n",
-    "robust_scaler(iris_X)"
    ]
   },
   {
@@ -1461,7 +1289,24 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "> **Z-transform or standard Scaler:**\n",
+    "> $$ \\frac{x - mean(x)}{sd(x)} $$\n",
+    "> the Standard Scaler assumes that the data within each feature follows a normal distribution, and it transforms the data to have a mean of 0 and a standard deviation of 1 by centering the distribution around 0 and removing the mean.\n",
+    "\n",
+    "\n",
+    "\n",
+    "> **Normalize:**\n",
+    "> $$ \\frac{x - x_{min}}{x_{min} - x_{min}} $$\n",
+    "> Samples that contain at least one non-zero component are independently rescaled so that their norm, or magnitude, is equal to one.\n",
+    "\n",
+    "> **Min Max:**\n",
+    "> $$ \\frac{x - x_{min}}{x_{max} - x_{min}} $$\n",
+    "> The min-max scaling technique adjusts the values of each feature to fall within a specified range.\n",
+    "\n",
+    "\n",
+    "> **Robust:**\n",
+    "> $$ \\frac{x - Q_1(x)}{Q_3(x) - Q_1(x)} $$\n",
+    "> The Robust Scaler is a feature scaling method that is resilient to outliers in the data. It is similar to the MinMax Scaler, but instead of using the minimum and maximum values, it employs the interquartile range (IQR). The median and scales of the data are adjusted based on the quantile range, which makes it robust to outliers."
    ]
   },
   {
@@ -1487,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "f13ab17e",
    "metadata": {
     "deletable": false,
@@ -1511,7 +1356,7 @@
       "Z-fransform accuracy: 100%\n",
       "Normalize accuracy: 84%\n",
       "Min Max accuracy: 49%\n",
-      "Min Max accuracy: 0%\n"
+      "Robust accuracy: 0%\n"
      ]
     }
    ],
