--- a/Week3/AssignmentWeek3.ipynb
+++ b/Week3/AssignmentWeek3.ipynb
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "e350ef54",
    "metadata": {
     "deletable": false,
@@ -657,21 +657,21 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Other_Faults    673\n",
-       "Bumps           402\n",
-       "K_Scatch        391\n",
-       "Z_Scratch       190\n",
-       "Pastry          158\n",
-       "Stains           72\n",
-       "Dirtiness        55\n",
-       "Name: target, dtype: int64"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "Unable to parse string \"Pastry\" at position 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "File \u001b[1;32mpandas\\_libs\\lib.pyx:2062\u001b[0m, in \u001b[0;36mpandas._libs.lib.maybe_convert_numeric\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Unable to parse string \"Pastry\"",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m classes:\n\u001b[0;32m      5\u001b[0m     df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtarget\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mwhere(df[name] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m, name, df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtarget\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m----> 6\u001b[0m     df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtarget\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_numeric\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtarget\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m new_df \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mdrop(classes, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# after adding the column, make matrices of the data for easy use\u001b[39;00m\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\ML\\lib\\site-packages\\pandas\\core\\tools\\numeric.py:154\u001b[0m, in \u001b[0;36mto_numeric\u001b[1;34m(arg, errors, downcast)\u001b[0m\n\u001b[0;32m    152\u001b[0m coerce_numeric \u001b[38;5;241m=\u001b[39m errors \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraise\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    153\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 154\u001b[0m     values \u001b[38;5;241m=\u001b[39m \u001b[43mlib\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmaybe_convert_numeric\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    155\u001b[0m \u001b[43m        \u001b[49m\u001b[43mvalues\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mset\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcoerce_numeric\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcoerce_numeric\u001b[49m\n\u001b[0;32m    156\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    157\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (\u001b[38;5;167;01mValueError\u001b[39;00m, \u001b[38;5;167;01mTypeError\u001b[39;00m):\n\u001b[0;32m    158\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m errors \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraise\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n",
+      "File \u001b[1;32mpandas\\_libs\\lib.pyx:2099\u001b[0m, in \u001b[0;36mpandas._libs.lib.maybe_convert_numeric\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Unable to parse string \"Pastry\" at position 0"
+     ]
     }
    ],
    "source": [
@@ -680,6 +680,7 @@
     "# Fill in the right code in the line below\n",
     "for name in classes:\n",
     "    df['target'] = np.where(df[name] == 1, name, df['target'])\n",
+    "    df['target'] = pd.to_numeric(df['target'])\n",
     "new_df = df.drop(classes, axis=1)\n",
     "# after adding the column, make matrices of the data for easy use\n",
     "faults_X, faults_y = np.array(new_df.iloc[:, :-1]), np.array(new_df['target'])\n",
@@ -691,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d91fb65b-68fe-4fda-a6c8-dd5ac7627684",
    "metadata": {
     "deletable": false,
@@ -709,20 +710,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "\nItems are not equal:\n ACTUAL: 'Bumps'\n DESIRED: 0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43massert_equal\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnew_df\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtarget\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmin\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m assert_equal(new_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtarget\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmax(), \u001b[38;5;241m6\u001b[39m)\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\ML\\lib\\site-packages\\numpy\\testing\\_private\\utils.py:425\u001b[0m, in \u001b[0;36massert_equal\u001b[1;34m(actual, desired, err_msg, verbose)\u001b[0m\n\u001b[0;32m    422\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    423\u001b[0m     \u001b[38;5;66;03m# Explicitly use __eq__ for comparison, gh-2552\u001b[39;00m\n\u001b[0;32m    424\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (desired \u001b[38;5;241m==\u001b[39m actual):\n\u001b[1;32m--> 425\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(msg)\n\u001b[0;32m    427\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (\u001b[38;5;167;01mDeprecationWarning\u001b[39;00m, \u001b[38;5;167;01mFutureWarning\u001b[39;00m) \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m    428\u001b[0m     \u001b[38;5;66;03m# this handles the case when the two types are not even comparable\u001b[39;00m\n\u001b[0;32m    429\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124melementwise == comparison\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m e\u001b[38;5;241m.\u001b[39margs[\u001b[38;5;241m0\u001b[39m]:\n",
-      "\u001b[1;31mAssertionError\u001b[0m: \nItems are not equal:\n ACTUAL: 'Bumps'\n DESIRED: 0"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "assert_equal(new_df['target'].min(), 0)\n",
     "assert_equal(new_df['target'].max(), 6)"
@@ -751,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "cfb3f10d",
    "metadata": {
     "deletable": false,
@@ -767,18 +755,39 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.930000e+02,  3.140000e+02,  1.044255e+06, ...,  2.500000e-01,\n",
+       "         3.280000e-02,  8.705000e-01],\n",
+       "       [ 4.100000e+01,  1.900000e+02,  1.892225e+06, ...,  6.290000e-02,\n",
+       "        -9.330000e-02,  1.000000e+00],\n",
+       "       [ 5.190000e+02,  5.280000e+02,  1.452400e+04, ...,  6.667000e-01,\n",
+       "        -4.056000e-01,  4.025000e-01],\n",
+       "       ...,\n",
+       "       [ 9.300000e+01,  1.030000e+02,  4.630871e+06, ...,  4.118000e-01,\n",
+       "        -6.790000e-02,  2.928000e-01],\n",
+       "       [ 5.570000e+02,  5.670000e+02,  1.130873e+06, ...,  6.429000e-01,\n",
+       "        -1.851000e-01,  4.630000e-01],\n",
+       "       [ 0.000000e+00,  2.240000e+02,  4.186000e+05, ..., -1.161000e-01,\n",
+       "        -5.430000e-02,  1.000000e+00]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# start up split\n",
     "from sklearn.model_selection import train_test_split\n",
-    "train_X, test_X, train_y, test_y = None, None, None, None\n",
-    "\n",
-    "#WRITE YOUR CODE HERE"
+    "train_X, test_X, train_y, test_y = train_test_split(faults_X, faults_y, test_size=0.30)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a6f65b68-40b3-4d99-a89e-a8c0e6afee70",
    "metadata": {
     "deletable": false,
@@ -795,7 +804,33 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distribution of labels in the train set\n",
+      "Other_Faults    0.352725\n",
+      "Bumps           0.203976\n",
+      "K_Scatch        0.198822\n",
+      "Z_Scratch       0.092784\n",
+      "Pastry          0.086156\n",
+      "Stains          0.037555\n",
+      "Dirtiness       0.027982\n",
+      "dtype: float64\n",
+      "\n",
+      "Distribution of labels in the test set\n",
+      "Other_Faults    0.332762\n",
+      "Bumps           0.214408\n",
+      "K_Scatch        0.207547\n",
+      "Z_Scratch       0.109777\n",
+      "Pastry          0.070326\n",
+      "Stains          0.036021\n",
+      "Dirtiness       0.029160\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# run the following print statements, if the proportions are similar\n",
     "# it means that stratification is working correctly\n",
