added precision to the code

--- a/Week3/AssignmentWeek3.ipynb
+++ b/Week3/AssignmentWeek3.ipynb
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "cc6285ae",
    "metadata": {
     "deletable": false,
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "2887665a",
    "metadata": {
     "deletable": false,
@@ -940,98 +940,25 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0.]])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# we expect the rows in the matrix to be predicted classes, and the columns to be the numbers for the gold\n",
     "# standard classses, this is different from the sklearn representation!\n",
     "\n",
-    "def construct_confusion_matrix(gold_standard_labels, predicted_labels):\n",
+    "def construct_confusion_matrix(gold_standard_labels, predicted_labels):    \n",
     "    # we will give you the first part, we create an empty square matrix\n",
     "    # the size of the number of labels in the gold standard, understand why?\n",
     "    number_of_classes = len(np.unique(gold_standard_labels))\n",
     "    confusion_matrix = np.zeros((number_of_classes, number_of_classes))\n",
     "    \n",
-    "    for rows in confusion_matrix:\n",
-    "        for item in rows:\n",
-    "            print(item)\n",
-    "#             print(confusion_matrix[rows][columns])\n",
+    "    for x in range(len(predicted_labels)):\n",
+    "        confusion_matrix[predicted_labels[x], gold_standard_labels[x]] = (confusion_matrix[predicted_labels[x],\n",
+    "                                                                                           gold_standard_labels[x]] + 1)\n",
     "\n",
     "    #WRITE YOUR CODE HERE\n",
     "    return confusion_matrix\n",
     "\n",
-    "construct_confusion_matrix(test_y, y_pred)"
+    "matrix = construct_confusion_matrix(test_y, y_pred)"
    ]
   },
   {
@@ -1079,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ba336bbe",
    "metadata": {
     "deletable": false,
@@ -1095,9 +1022,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<AxesSubplot:title={'center':'Distribution of the classes among the 1941 instances.'}>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#WRITE YOUR CODE HERE"
+    "sns.heatmap(matrix, annot=True)"
    ]
   },
   {
@@ -1131,6 +1069,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0c64b8a3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "id": "12c14028",
    "metadata": {
     "deletable": false,
@@ -1155,13 +1101,25 @@
     "\n",
     "# As a warmup, calculate accuracy over the entire test set\n",
     "def accuracy(confusion_matrix): \n",
-    "    accuracy = 0.0\n",
-    "    #WRITE YOUR CODE HERE\n",
+    "    accuracy = sum(np.diag(confusion_matrix)) / confusion_matrix.sum()\n",
     "    return accuracy\n",
     "\n",
     "def precision(confusion_matrix, average): \n",
     "    assert average in [None, 'macro', 'micro', 'weighted']\n",
-    "    #WRITE YOUR CODE HERE\n",
+    "    precision = np.diagonal(confusion_matrix) / np.sum(confusion_matrix, axis= 1)\n",
+    "    \n",
+    "    if average ==  None:           \n",
+    "        return precision\n",
+    "    \n",
+    "    if average == 'micro':\n",
+    "        return accuracy(confusion_matrix)\n",
+    "    \n",
+    "    if average == 'macro':\n",
+    "        return np.mean(precision)\n",
+    "    \n",
+    "    if average == 'weighted':   \n",
+    "        weighted = 1 / np.sum(confusion_matrix, axis= 0)\n",
+    "        return np.sum(precision * weighted) / np.sum(confusion_matrix)\n",
     "\n",
     "def recall(confusion_matrix, average): \n",
     "    assert average in [None, 'macro', 'micro', 'weighted']\n",
@@ -1176,7 +1134,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
+   "id": "4336f504",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.03596938775510204"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_matrix = np.array([[1, 2, 0],\n",
+    "                       [0, 3, 1],\n",
+    "                       [0, 5, 2]])\n",
+    "average = [None, 'macro', 'micro', 'weighted']\n",
+    "\n",
+    "# [precision(test_matrix, i) for i in average]\n",
+    "precision(test_matrix, 'weighted')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "id": "825cfc3d",
    "metadata": {
     "deletable": false,
@@ -1193,7 +1178,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "\nItems are not equal:\n ACTUAL: <class 'NoneType'>\n DESIRED: <class 'numpy.ndarray'>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[61], line 6\u001b[0m\n\u001b[0;32m      1\u001b[0m test_matrix \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([[\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m0\u001b[39m],\n\u001b[0;32m      2\u001b[0m                        [\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m1\u001b[39m],\n\u001b[0;32m      3\u001b[0m                        [\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m2\u001b[39m]])\n\u001b[0;32m      5\u001b[0m assert_equal(\u001b[38;5;28mtype\u001b[39m(precision(test_matrix, \u001b[38;5;28;01mNone\u001b[39;00m)), np\u001b[38;5;241m.\u001b[39mndarray)\n\u001b[1;32m----> 6\u001b[0m \u001b[43massert_equal\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mtype\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mrecall\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtest_matrix\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mndarray\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m assert_equal(\u001b[38;5;28mtype\u001b[39m(f1(test_matrix, \u001b[38;5;28;01mNone\u001b[39;00m)), np\u001b[38;5;241m.\u001b[39mndarray)\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\ML\\lib\\site-packages\\numpy\\testing\\_private\\utils.py:425\u001b[0m, in \u001b[0;36massert_equal\u001b[1;34m(actual, desired, err_msg, verbose)\u001b[0m\n\u001b[0;32m    422\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    423\u001b[0m     \u001b[38;5;66;03m# Explicitly use __eq__ for comparison, gh-2552\u001b[39;00m\n\u001b[0;32m    424\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (desired \u001b[38;5;241m==\u001b[39m actual):\n\u001b[1;32m--> 425\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(msg)\n\u001b[0;32m    427\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (\u001b[38;5;167;01mDeprecationWarning\u001b[39;00m, \u001b[38;5;167;01mFutureWarning\u001b[39;00m) \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m    428\u001b[0m     \u001b[38;5;66;03m# this handles the case when the two types are not even comparable\u001b[39;00m\n\u001b[0;32m    429\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124melementwise == comparison\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m e\u001b[38;5;241m.\u001b[39margs[\u001b[38;5;241m0\u001b[39m]:\n",
+      "\u001b[1;31mAssertionError\u001b[0m: \nItems are not equal:\n ACTUAL: <class 'NoneType'>\n DESIRED: <class 'numpy.ndarray'>"
+     ]
+    }
+   ],
    "source": [
     "test_matrix = np.array([[1, 2, 0],\n",
     "                       [0, 3, 1],\n",
